# embedder

./: .gitignore  AGENTS.md  main.py  pyproject.toml
features/: frame_00000.pt  frame_00001.pt  frame_00002.pt  frame_00003.pt  frame_00004.pt  frame_00005.pt  frame_00006.pt  frame_00007.pt  frame_00008.pt  frame_00009.pt  frame_00010.pt  frame_00011.pt  frame_00012.pt  frame_00013.pt  frame_00014.pt  frame_00015.pt  frame_00016.pt  frame_00017.pt  frame_00018.pt  frame_00019.pt  frame_00020.pt  frame_00021.pt  frame_00022.pt  frame_00023.pt  frame_00024.pt  frame_00025.pt  frame_00026.pt  frame_00027.pt  frame_00028.pt  frame_00029.pt  frame_00030.pt  frame_00031.pt  frame_00032.pt  frame_00033.pt  frame_00034.pt  frame_00035.pt  frame_00036.pt  frame_00037.pt  frame_00038.pt  frame_00039.pt  (+1881 more)
